# CD_Assignment

./: .gitignore  LICENSE  README.md
client/: CMakeLists.txt
client/include/: ApiClient.h
client/src/: ApiClient.cpp  main.cpp
server/: package.json  server.js
